Optimise solver